--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,7 @@
-@import "tailwindcss";
+@import "../node_modules/tailwindcss";
 
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
-  color: white;
-  background-color: #242424;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: white;
-    background-color: #242424;
-  }
+.option-value{
+   @apply text-gray-700 dark:text-gray-800;
+   font-family: Anton, sans-serif;
+   font-weight: 400 ;
 }
